force-app/main/default/objects/Migrate_Custom_Object_Store__c/Migrate_Custom_Object_Store__c.object-meta.xml
<CustomObject>
    <label>Migrate Custom Object Store</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Store Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migrate Custom Object Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>