force-app/main/default/objects/Migrate_Custom_Object_Store__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <label>Batch Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>