force-app/main/default/objects/Migrate_Custom_Object_Store__c/fields/Big_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Big_Object_Name__c</fullName>
    <label>Big Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>