force-app/main/default/objects/Migrate_Custom_Object_Store__c/fields/Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>Cron_Expression__c</fullName>
    <label>Cron Expression</label>
    <length>100</length>
    <type>Text</type>
</CustomField>