force-app/main/default/objects/Migrate_Custom_Object_Store__c/fields/Cron_Id__c.field-meta.xml
<CustomField>
    <fullName>Cron_Id__c</fullName>
    <label>Cron Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>