force-app/main/default/objects/Migrate_Custom_Object_Store__c/fields/Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping__c</fullName>
    <label>Field Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>