force-app/main/default/objects/Migrate_Custom_Object_Store__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <label>Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>