force-app/main/default/objects/Migrate_Custom_Object_Store__c/fields/Migrate_Time__c.field-meta.xml
<CustomField>
    <fullName>Migrate_Time__c</fullName>
    <label>Migrate Time</label>
    <type>Time</type>
</CustomField>