force-app/main/default/objects/Migrate_Custom_Object_Store__c/fields/Recurrence_Details__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Details__c</fullName>
    <label>Recurrence Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>