force-app/main/default/objects/Migrate_Custom_Object_Store__c/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>