force-app/main/default/objects/Migrate_Custom_Object_Store__c/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <label>SOQL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>