force-app/main/default/objects/Migrate_Custom_Object_Store__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Migrate_Custom_Object_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>