force-app/main/default/objects/Migrate_Custom_Object_Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Big_Object_Name__c</columns>
    <columns>SObject_Name__c</columns>
    <columns>Field_Mapping__c</columns>
    <columns>SOQL__c</columns>
    <columns>User_Id__c</columns>
    <columns>Job_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>